--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,14 @@ android {
         }
     }
     compileOptions {
+
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
+
 
     implementation 'com.google.code.gson:gson:2.8.5' // Old 2.8.2
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -37,4 +39,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+}
+
+task prepareKotlinBuildScriptModel {
+
 }
