--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Rgpotter">
-        <activity android:name=".SetupActivity"></activity>
+        <activity android:name=".activity_visualization"></activity>
+        <activity android:name=".SetupActivity" />
         <activity android:name=".CuriosityActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".MainActivity">
