--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Rgpotter">
-        <activity android:name=".VisualizationActivity"></activity>
+        <activity android:name=".activity_lumus"></activity>
+        <activity android:name=".VisualizationActivity" />
         <activity android:name=".SetupActivity" />
         <activity android:name=".CuriosityActivity" />
         <activity android:name=".SignUpActivity" />
