--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rg_potter">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" android:description="@string/permdesc_flashlight"/>
+    <uses-permission android:name="android.permission.FLASHLIGHT"/>
 
     <application
         android:allowBackup="true"
@@ -14,7 +17,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Rgpotter">
         <activity android:name=".LumusActivity"></activity>
-        <activity android:name=".activity_lumus" />
         <activity android:name=".VisualizationActivity" />
         <activity android:name=".SetupActivity" />
         <activity android:name=".CuriosityActivity" />
